styles/modules-center/_modulesCenter.scss
@use "theme" as *;

modules-center-container {
  background: $base-transparent;
  border: 2px solid $base;
  border-radius: $border-radius;
  min-height: 500px;
  padding: 20px;
}

date-time-container {
  background-color: $base-transparent;
  border-radius: $border-radius;
}

bar-date-time {
  font-weight: 600;
  color: $white;
  padding-left: 5px;
  padding-right: 5px;
}

time-container {
  background-color: transparent;
  margin-bottom: 10px;
}

local-clock-hours,
local-clock-minutes {
  background-color: $crust-transparent;
  transition: all 400ms cubic-bezier(0.4, 0, 0.2, 1);
  color: $overlay0;
  font-size: 60px;
  font-weight: 600;
  border-radius: $border-radius;
  border: 1px solid $surface0;
  min-width: 80px;
  padding: 20px;
  margin: 2px;
}

local-clock-hours {
  color: $overlay0;
}

local-clock-minutes {
  color: $accent-background-transparent;
}

world-clock-panel {
  background-color: transparent;
  padding: 10px;
  min-width: 180px;
}

world-clock-name,
world-clock-time,
world-clock-date {
  font-weight: bold;
  font-size: 16px;
  padding: 10px;
  min-width: 100px;
}

world-clock-time,
world-clock-date {
  color: $overlay0
}

world-clock-name {
  color: $surface0
}

/* Calendar */

detail-calendar {
  background-color: $crust-transparent;
  border: 1px solid $surface0-transparent;
  border-radius: $border-radius;
  padding: 20px;
}

detail-calendar .day-name {
  color: $overlay0;
  font-weight: 600;
  min-width: 10px;
}

/* Style the current day */
detail-calendar .today {
  color: $accent-foreground;
  background-color: $accent-background-transparent;
  border-radius: $border-radius;
  font-weight: bold;
}

/* Style days from other months */
detail-calendar .other-month {
  color: $surface0;
}

/* Style the header (month/year switcher) */
detail-calendar header {
  background-color: transparent;
  color: $overlay0;
  padding-bottom: 10px;
  border-bottom: 1px solid $base;
}

/* Days */
detail-calendar grid label {
  color: $overlay0;
  font-size: 18px;
  background-color: transparent;
  padding:5px;
  transition: all 200ms cubic-bezier(0.4, 0, 0.2, 1);
}

/* Highlight days*/
detail-calendar grid label:hover {
  background-color: $hover-background;
  color: $hover-foreground;
  font-weight: 600;
  border-radius: $border-radius;
}

